@@ -281,8 +281,7 @@ static word total_stack_black_listed(void)
 
     for (i = 0; i < GC_n_heap_sects; i++) {
         struct hblk * start = (struct hblk *) GC_heap_sects[i].hs_start;
-        size_t len = (word) GC_heap_sects[i].hs_bytes;
-        struct hblk * endp1 = start + len/HBLKSIZE;
+        struct hblk * endp1 = start + GC_heap_sects[i].hs_bytes/HBLKSIZE;
 
         total += GC_number_stack_black_listed(start, endp1);
     }
