@@ -1,3 +1,15 @@
+2011-05-07  Ivan Maidanski  <ivmai@mail.ru>
+
+	* alloc.c (GC_clear_a_few_frames): Use BZERO().
+	* mark_rts.c (GC_clear_roots, GC_rebuild_root_index): Ditto.
+	* reclaim.c (GC_start_reclaim): Ditto.
+	* blacklst.c (total_stack_black_listed): Remove "len" local
+	variable.
+	* dbg_mlc.c (GC_generate_random_valid_address): Replace "for"
+	statement with "do-while" one.
+	* dyn_load.c (GC_register_dynamic_libraries,
+	GC_register_dynlib_callback): Remove redundant parentheses.
+
 2011-05-06  Ivan Maidanski  <ivmai@mail.ru>
 
 	* cord/cordxtra.c (CORD_from_file_lazy_inner): Suppress
